--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
-    "singleQuote": false,
-    "bracketSpacing": true,
-    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": true,
     "trailingComma": "es5",
-    "semi": true
-}
+    "printWidth": 80,
+    "tabWidth": 2,
+    "endOfLine": "auto"
+  }
+  
