--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js",
     "lint": "eslint src/**/*.js",
+    "lint:fix": "eslint src/**/*.js --fix",
     "test": "jest tests"
   },
   "keywords": [
@@ -21,6 +22,8 @@
     "@eslint/js": "^9.3.0",
     "babel-jest": "^29.7.0",
     "eslint": "^9.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "globals": "^15.3.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
